[project]
name = "mcpproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.4",
    "langchain>=1.2.15",
    "langchain-huggingface>=1.2.1",
    "requests>=2.33.1",
    "serpapi>=1.0.2",
    "streamlit>=1.56.0",
    "wikipedia>=1.4.0",
]
